fix: tab-title icon on Firefox

--- a/src/components/sbb-tab-title/sbb-tab-title.scss
+++ b/src/components/sbb-tab-title/sbb-tab-title.scss
@@ -52,6 +52,11 @@
   }
 }
 
+slot[name='icon'] {
+  display: flex;
+  flex-shrink: 0;
+}
+
 // If the the device can hover over elements with ease
 @include sbb.hover-mq($hover: true) {
   .sbb-tab-title:hover {
